tests/instantiating/memory_without_size/stderr.golden
error: 'memory' must have 'size' property set
bus.fbd +2:3
   |
 2 |   M memory
   |   ^
